alignment fix

--- a/static/styles.css
+++ b/static/styles.css
@@ -150,9 +150,8 @@ i {
 .img-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    width: 100%;
+    width: 90%;
     margin: 1em;
-    overflow:visible;
 }
 
 .img-container img,
